apache with mod_rails (known as passenger) as default web server. 
We have also added an mod_xforward apache module to allow unloading the rails
stack with long running requests to the backend.
Please note that current apache2 versions have a known bug which cuts the http
headers regardless to it's configuration. Please use apache2 from openSUSE:Tools
project to get this fixed for now.
Also the patched version of rubygem-passenger from openSUSE:Tools project is recommended.

Known Regressions to 2.1:
=========================

* none yet

Features:
=========

* web interface improvements:
  - package filtering
  - Generic authentification proxy support
  - delete request dialogs
  - request and review handling improvements
  - social features, i.e. show other user's projects and requests

* api
  - review of requests by project or package maintainers is possible now (FATE #310806)
  - better Cross-Site Scripting (XSS) protection
  - larger number of request handling improvements

* backend:


Changes:
========

* web interface
  - bug reporting for projects/packages is only possible if a bugowner is set
  - XSS protection plugins are used now (CVE-2011-0462)

* api
  - It was not possible so far to create submit requests from packages where no write access exists.
    This is possible now, but the source package maintainer will get asked for review the request.
  - the route /group/$GROUP is showing correct xml description and no directory anymore

Deprecated:
===========

The following calls have been marked as deprecated, they will get removed in OBS 3.0

* api
  - /person/$LOGIN/group   ->  use /group?login=$LOGIN   instead

Requirements:
=============

* The OBS server should not run on a system with less than 2GB memory. 
  4GB is recommended, esp. when the same system is also building packages.

* Use osc 0.131 or later to get access to the new features.

* Usage of Ruby on Rails version 2.3.11 is recommended.
