@@ -318,7 +318,6 @@ our $serviceinfo = [
 	'code',         # can be "running", "failed", "succeeded"
 	'xsrcmd5',
 	'lsrcmd5',
-        [],
 	'error',        # contains error message in case of error
 ];
 
